# extract_mdnorm

./: .gitignore  CMakeLists.txt
CMake/: catch.cmake
data/: CORELLI_29782_rotations.hdf5  integrFlux.txt  use_det.txt
data/benzil/: meow.py
data/bixbyite/: meow.py
garnet_reduction/: corelli_reduction_plan.yaml  input_data.py  pyproject.toml.diff  topaz_reduction_plan.yaml
src/: LoadEventWorkspace.cpp  LoadEventWorkspace.h  LoadEventWorkspace2.cpp  LoadEventWorkspace2.h  LoadExtrasWorkspace.cpp  LoadExtrasWorkspace.h  LoadFluxWorkspace.cpp  LoadFluxWorkspace.h  LoadSolidAngleWorkspace.cpp  LoadSolidAngleWorkspace.h  benzil_corelli.cpp  bixbyite_topaz.cpp  calcDiffractionIntersectionIntegral-test.cpp  calcDiffractionIntersectionIntegral.cpp  calcDiffractionIntersectionIntegral.h  calcSingleDetectorNorm.cpp  calcSingleDetectorNorm.h  calculateIntersections-test.cpp  calculateIntersections.cpp  calculateIntersections.h  garnet_reduction_corelli.cpp  histogram.h  mdnorm.cpp  mdnorm.h  parameters.h  validation_data_filepath.h.in  wsIdx-test.cpp
